<resources>
    <string name="app_name">GSTM</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">La dirección de email no es válida</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">El campo es obligatorio</string>
    <string name="permission_rationale">"Los permisos de contactos son necesarios para proporcionar terminaciones de
        correo electrónico."
    </string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="remove">Eliminar</string>
    <string name="create_account">Crear cuenta</string>
    <string name="new_user">Nuevo usuario</string>
    <string name="new_user_create">Usuario creado correctamente.\nAhora puede iniciar sesión y utilizar la GSTM.\nPulse Aceptar para continuar.</string>
    <string name="new_treatment">Nuevo tratamiento</string>
    <string name="treatment">Tratamiento</string>
    <string name="medical_date">Cita médica</string>
    <string name="new_medical_date">Nueva cita médica</string>
    <string name="calendar">Calendario</string>
	<string name="current_month">Mes actual</string>
    <string name="date">Día</string>
    <string name="Hour">Hora</string>
    <string name="Place">Lugar</string>
    <string name="Observations">Observaciones</string>
    <string name="hours_to_confirmed">Horas confirmación</string>
    <string name="my_profile">Mi perfil</string>
    <string name="name">Nombre</string>
    <string name="surnames">Apellidos</string>
    <string name="unsubscribe">Darse de baja</string>
    <string name="supervisions">Supervisiones</string>
    <string name="my_supervisions">Mis supervisiones</string>
    <string name="my_supervisors">Mis supervisores</string>
    <string name="supervisions_request">Solicitar supervisión</string>
    <string name="requests">Solicitudes</string>
    <string name="relationship">Relación</string>
    <string name="find_user">Buscar usuario</string>
    <string name="find">Buscar</string>
    <string name="results">Resultados</string>
    <string name="medicines">Medicamentos</string>
	<string name="medicine">Medicamento</string>
    <string name="init_date">Fecha de inicio</string>
    <string name="end_date">Fecha de fin</string>
    <string name="medicine_time">Horas del medicamento</string>
    <string name="confirm_pass">Confirmar</string>
    <string name="email_exists">Ya exite un usuario con ese email</string>
    <string name="password_confirm_error">El contraseña y la confirmación no coinciden</string>
    <string name="remember_pass">Recordar contraseña</string>
    <string name="email_not_found">No existe ningún usuario con ese email</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="User">Usuario</string>
    <string name="notification_level">Nivel de notificación</string>
    <string name="all_notification">Todos los avisos</string>
    <string name="alarms_notification">Solo alarmas</string>
    <string name="not_requests">No se han entrando solicitudes pendientes.</string>
    <string name="bad_date_format">Formato de fecha incorrecto</string>
    <string name="bad_end_date">La fecha de fin debe ser superior a la fecha de inicio</string>
    <string name="bad_hour_format">Formato de hora incorrecto</string>
    <string name="medicines_error">Es necesario añadir al menos un medicamento</string>
    <string name="supervisions_request_pending_error">Ya ha enviado una solicitud a este usuario</string>
    <string name="supervisions_request_accept_error">Ya está supervisando a este usuario</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="notes">Notas</string>
    <string name="date_not_valid">La fecha de inicio no puede ser inferior a la actual</string>
    <string name="notify_medications_title">es el momento de tomar los siguientes medicamentos</string>
    <string name="notify_medical_date_title">tiene las siguientes citas médicas</string>
    <string name="confirm_medications_title">confirme que ha tomado los siguientes medicamentos</string>
    <string name="confirm_medical_date_title">confirme que ha asistido a las siguientes citas médicas</string>
	<string name="alarm_title">AVISO</string>
	<string name="alarms">Alarmas</string>
	<string name="confirms">Avisos</string>
	<string name="alarm_mens">No se han confirmado las siguientes acciones</string>
	<string name="confirm_mens">Se han confirmado las siguientes acciones</string>
	<string name="email_title">GSTM recordatorio de contraseña</string>
	<string name="email_mens">Su contraseña para GSTM es </string>
    <string name="user_not_exist">El usuario ya no existe</string>
</resources>
